Bug 440002 - crash on exit if popups have been blocked. Patch by Stuart Morgan <stuart.morgan+bugzilla@gmail.com>, s/sr=pink