camino/src/browser/BrowserWrapper.mm
@@ -225,7 +225,7 @@ static FlashblockWhitelistManager* sFlashblockWhitelistManager = nil;
 - (void)ensureContentClickListeners;
 
 - (void)setPendingActive:(BOOL)active;
-- (void)registerNotificationListener;
+- (void)registerNotificationListeners;
 
 - (void)clearStatusStrings;
 
@@ -253,6 +253,8 @@ static FlashblockWhitelistManager* sFlashblockWhitelistManager = nil;
 - (void)removeFindBarViewAndDisplay;
 
 - (void)performCommandForXULElementWithID:(NSString*)elementIdentifier onPage:(NSString*)pageURI;
+
+- (void)xpcomTerminate:(NSNotification*)aNotification;
 
 @end
 
@@ -318,7 +320,7 @@ static FlashblockWhitelistManager* sFlashblockWhitelistManager = nil;
 
     mDetectedSearchPlugins = [[NSMutableArray alloc] initWithCapacity:1];
 
-    [self registerNotificationListener];
+    [self registerNotificationListeners];
   }
   return self;
 }
@@ -358,6 +360,13 @@ static FlashblockWhitelistManager* sFlashblockWhitelistManager = nil;
   [mBlockedPopupView release];
 
   [super dealloc];
+}
+
+- (void)xpcomTerminate:(NSNotification*)aNotification
+{
+  // Make sure we release core objects before XPCOM shuts down; by the time we
+  // get to dealloc it may already be too late.
+  NS_IF_RELEASE(mBlockedPopups);  // NULLs out the pointer
 }
 
 - (BOOL)isFlipped
@@ -1346,12 +1355,17 @@ static FlashblockWhitelistManager* sFlashblockWhitelistManager = nil;
   mPendingURI = [inURI retain];
 }
 
-- (void)registerNotificationListener
+- (void)registerNotificationListeners
 {
   [[NSNotificationCenter defaultCenter] addObserver:self
                                            selector:@selector(imageLoadedNotification:)
                                                name:SiteIconLoadNotificationName
                                              object:self];
+
+  [[NSNotificationCenter defaultCenter] addObserver:self
+                                           selector:@selector(xpcomTerminate:)
+                                               name:XPCOMShutDownNotificationName
+                                             object:nil];
 }
 
 // called when [[SiteIconProvider sharedFavoriteIconProvider] fetchFavoriteIconForPage:...] completes
